# semillero_c

semillero-c-main/: CMakeLists.txt
semillero-c-main/src/: main.c
semillero-c-main/src/persistence/: transaction_storage.c  transaction_storage.h
semillero-c-main/src/transactions/: transaccion.c  transaccion.h
semillero-c-main/src/transactions/anulacion/: anulacion.c  anulacion.h
semillero-c-main/src/transactions/cierre/: cierre.c  cierre.h
semillero-c-main/src/transactions/compra/: compra.c
semillero-c-main/src/transactions/reporte_totales/: reporte_totales.c
semillero-c-main/src/utils/: validaciones.c  validaciones.h
src/: main.c
src/persistence/: transaction_storage.c  transaction_storage.h
src/transactions/: transaccion.c  transaccion.h
src/transactions/anulacion/: anulacion.c  anulacion.h
src/transactions/cierre/: cierre.c
src/transactions/compra/: compra.c  compra.h
src/transactions/reporte_totales/: reporte_totales.c  reporte_totales.h
src/utils/: validaciones.c  validaciones.h
